Hopefully fix issues with image on Safari
The image was stretched out vertically in Safari, which was a problem
due to my lack of understanding of flex boxes and lack of
cross-browser testing. Oops. Hopefully I can replace my code with more
legit HTML/CSS soon.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,12 @@ body {
   flex-direction: row;
 }
 
+.headshot {
+  flex-shrink: 0;
+  max-height: 16rem;
+  max-width: 16rem;
+}
+
 .salut {
   margin: 0 0 0 20px;
   text-align: justify;
